--- a/src/chat/_form.scss
+++ b/src/chat/_form.scss
@@ -19,7 +19,7 @@
   }
   .placeholder-37qJjk,
   .slateTextArea-1Mkdgw {
-    padding: 15px;
+    padding: 15px 15px 15px 0;
   }
 
   .attachButton-2WznTc {
