--- a/src/chat/_form.scss
+++ b/src/chat/_form.scss
@@ -29,5 +29,14 @@
   .buttons-3JBrkn {
     height: 52px;
   }
-}
 
+	// Announcement bar thingy
+	.wrapper-39oAo3 {
+		background: var(--background-light);
+	}
+
+	// No perms
+	.channelTextArea-rNsIhG {
+		background: var(--background-alt);
+	}
+}
