--- a/src/modals/_uploadfile.scss
+++ b/src/modals/_uploadfile.scss
@@ -1,11 +1,12 @@
-#app-mount {
-  .uploadModal-2ifh8j {
-    background: var(--background);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    .footer-3mqk7D {
-      background: var(--background-alt);
-      box-shadow: none;
-    }
-  }
+#app-mount .uploadModal-2ifh8j {
+	background: var(--background);
+	border-radius: var(--border-radius);
+	box-shadow: var(--box-shadow);
+	.footer-3mqk7D {
+		background: var(--background-alt);
+		box-shadow: none;
+	}
+	.slateTextArea-1Mkdgw {
+		padding-left: 15px;
+	}
 }
