--- a/src/modals/_userprofile.scss
+++ b/src/modals/_userprofile.scss
@@ -36,7 +36,6 @@
 
 
 
-
   .userInfoSection-q_35fn {
     border: none;
   }
@@ -60,7 +59,7 @@
 		border: none;
   }
 
-  .note-QfFU8y {
+  .note-367eZJ {
     margin: 0;
   }
   textarea {
