--- a/src/settings/_global.scss
+++ b/src/settings/_global.scss
@@ -61,4 +61,10 @@
   .contentRegion-3nDuYy {
     background: var(--background);
   }
+
+	// Save changes
+	.elevationHigh-1PneE4 {
+		background: var(--background-light) !important;
+		box-shadow: var(--box-shadow);
+	}
 }
