--- a/MinimalCord.theme.css
+++ b/MinimalCord.theme.css
@@ -7,7 +7,7 @@
  * @website https://www.gibbu.me
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import url("https://discordstyles.github.io/MinimalCord/base.css");
 
 :root {
