--- a/MinimalCord.theme.css
+++ b/MinimalCord.theme.css
@@ -2,6 +2,7 @@
  * @name MinimalCord
  * @author Gibbu#1211
  * @version 2.0.0
+ * @invite ZHthyCw
  * @description Changes Discord enough to give it a fresh feel while also making it darker. Supports both Light and Dark themes.
  * @source https://github.com/DiscordStyles/MinimalCord
  * @website https://www.gibbu.me
