--- a/src/channels/_channel.scss
+++ b/src/channels/_channel.scss
@@ -24,6 +24,13 @@
         z-index: 1;
       }
     }
+
+    &.typeThread-3ESTm- .content-1x5b-n {
+      padding-left: 42px;
+    }
+  }
+  .spine--Wla_O {
+    z-index: 1;
   }
   .content-1x5b-n {
     margin-left: 0;
