Fixed reply bar and reply mention highlight.

--- a/src/chat/_bars.scss
+++ b/src/chat/_bars.scss
@@ -27,4 +27,12 @@
       padding-left: 12px;
     }
   }
+
+  // Reply to message
+  .attachedBars-tZDmyV {
+    background: var(--background);
+  }
+  .replyBar-1YLQ2F {
+    background: var(--background-light);
+  }
 }
