--- a/src/app/_tooltips.scss
+++ b/src/app/_tooltips.scss
@@ -12,5 +12,12 @@
   .tooltipContent-bqVLWK {
     color: var(--text-focus);
     font-weight: var(--font-weight-bold);
+    .guildNameText-3Zwx4p {
+      color: var(--text-focus);
+    }
+    .muteText-gutGxh {
+      color: var(--text-normal);
+    }
   }
+
 }
