--- a/src/guilds/_server.scss
+++ b/src/guilds/_server.scss
@@ -10,9 +10,12 @@
   }
 
   // Add/Join server & Server Discovery
-  .circleIconButton-1QV--U {
+  .circleIconButton-1XqULR {
     background: var(--background-light);
     &:hover {
+      background: rgb(var(--discord-green) / 1);
+    }
+    &.selected-2jcQaY {
       background: rgb(var(--discord-green) / 1);
     }
   }
