Fixed editing message textbox

--- a/src/chat/_message.scss
+++ b/src/chat/_message.scss
@@ -4,6 +4,9 @@
     .scrollableContainer-2NUZem {
       background: var(--edit-message-box);
       box-shadow: none;
+      .slateTextArea-1Mkdgw {
+        padding-left: 15px;
+      }
     }
 		// Buttons
     .wrapper-2aW0bm {
