--- a/src/guilds/_folder.scss
+++ b/src/guilds/_folder.scss
@@ -1,9 +1,9 @@
 #app-mount {
-  .expandedFolderBackground-1cujaW {
+  .expandedFolderBackground-3ZDF05 {
     z-index: -1;
     background: var(--background-light);
   }
-  .folder-1hbNCn {
+  .folder-2w6LX1 {
     background: var(--background-light);
   }
 }
