--- a/src/guilds/_server.scss
+++ b/src/guilds/_server.scss
@@ -10,12 +10,10 @@
   }
 
   // Add/Join server & Server Discovery
-  .circleIconButton-1XqULR {
+  .circleIconButton-hZmpE8 {
     background: var(--background-light);
-    &:hover {
-      background: rgb(var(--discord-green) / 1);
-    }
-    &.selected-2jcQaY {
+    &:hover,
+    &.selected-3mFF3I {
       background: rgb(var(--discord-green) / 1);
     }
   }
