Revert changes :rage:

--- a/src/guilds/_server.scss
+++ b/src/guilds/_server.scss
@@ -10,7 +10,7 @@
   }
 
   // Add/Join server & Server Discovery
-  .circleIconButton-hZmpE8 {
+  .circleIconButton-1XqULR {
     background: var(--background-light);
     &:hover,
     &.selected-3mFF3I {
