Fixed members list

--- a/src/members/_container.scss
+++ b/src/members/_container.scss
@@ -1,8 +1,7 @@
 #app-mount {
-  .members-1998pB {
+  .container-2wlB3z,
+  .members-1998pB,
+  .members-1998pB > div {
     background: transparent;
-    & > div {
-      background: transparent;
-    }
   }
 }
